--- a/Design/style.css
+++ b/Design/style.css
@@ -1,3 +1,20 @@
+@font-face {
+    font-family: "NIXGONFONTS_B";
+    src: url("./font/NIXGONFONTS_B.ttf") format("truetype");
+  }
+  @font-face {
+    font-family: "NIXGONFONTS_L";
+    src: url("./font/NIXGONFONTS_L.ttf") format("truetype");
+  }
+  @font-face {
+    font-family: "NIXGONFONTS_M";
+    src: url("./font/NIXGONFONTS_M.ttf") format("truetype");
+  }
+  
+  * {
+    font-family: "NIXGONFONTS_M";
+  }
+
 body, ul, h2, p {
     margin: 0;
     padding: 0;
@@ -8,7 +25,7 @@ li {
 }
 
 body {
-    background-color: white;
+    background-color: #F2EFEB;
     color: #999;
 }
 
@@ -17,6 +34,48 @@ body {
     height: 100vh;
     justify-content: center;
     align-items: center;
+}
+
+header {
+    position: fixed;
+    top: 0;
+    /* width: 100% */
+    left: 0;
+    right: 0;
+    background-color: #D9BDAD;
+  }
+
+nav {
+    background-color: var(--color-deepblue);
+}
+
+#nav-title {
+    color: #594539;
+    font-weight: 700;
+    font-size: 21px;
+}
+
+#nav-title:hover {
+    cursor: default;
+}
+#test {
+    width: 80%; /* Adjust the width as needed */
+    margin: 0 auto; /* Center the div horizontally */
+    padding-top: 100px; /* Ensure content below the fixed header is visible */
+}
+.navbar-nav .nav-item>a {
+    color: #594539;
+    opacity: 0.5;
+    transition: all .5s ease-in-out;
+}
+
+.navbar-nav .nav-item>a:hover {
+    opacity: 1;
+}
+
+.navbar-nav .nav-item .active {
+    opacity: 1;
+    font-weight: 700;
 }
 
 .team {
@@ -118,11 +177,52 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', e
 }
 
 
+.bar-bg {
+    position: absolute;
+    width: 100%;
+    height: 5px;
+    bottom: 0;
+    left: 0;
+    background-color: #F2DCC9;
+  }
+  .bar-ing {
+    position: absolute;
+    height: 5px;
+    bottom: 0;
+    left: 0;
+    background-color: #594539;
+  }
+  /* 모달창 기본 스타일 */
+  .modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+}
 
-
-
-
-
-
-
+/* 모달창 내용 스타일 */
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 30%;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+/* 여백조정 */
+.input-container {
+    margin-bottom: 10px; /* 원하는 여백 크기로 조정 */
+}
+/* 입력란 스타일 수정 */
+.input-container input {
+    display: block; /* 줄로 표시 */
+    width: 100%; /* 부모 요소의 전체 너비를 채우도록 설정 */
+    box-sizing: border-box; /* 너비와 높이에 padding과 border를 포함 */
+    margin-bottom: 10px; /* 원하는 여백 크기로 조정 */
+}
 
