--- a/Design/style.css
+++ b/Design/style.css
@@ -1,21 +1,31 @@
 @font-face {
     font-family: "NIXGONFONTS_B";
     src: url("./font/NIXGONFONTS_B.ttf") format("truetype");
-  }
-  @font-face {
+}
+
+@font-face {
     font-family: "NIXGONFONTS_L";
     src: url("./font/NIXGONFONTS_L.ttf") format("truetype");
-  }
-  @font-face {
+}
+
+@font-face {
     font-family: "NIXGONFONTS_M";
     src: url("./font/NIXGONFONTS_M.ttf") format("truetype");
-  }
-  
-  * {
-    font-family: "NIXGONFONTS_M";
-  }
+}
 
-body, ul, h2, p {
+* {
+    font-family: "NIXGONFONTS_M";
+}
+
+input[type="password"] {
+    /* 비밀번호 입력란에 적용되는 공통 스타일 */
+    font-family: "Arial", sans-serif; /* 비밀번호 입력란의 기본 폰트 */
+}
+
+form body,
+ul,
+h2,
+p {
     margin: 0;
     padding: 0;
 }
@@ -43,7 +53,7 @@ header {
     left: 0;
     right: 0;
     background-color: #D9BDAD;
-  }
+}
 
 nav {
     background-color: var(--color-deepblue);
@@ -58,11 +68,16 @@ nav {
 #nav-title:hover {
     cursor: default;
 }
+
 #test {
-    width: 80%; /* Adjust the width as needed */
-    margin: 0 auto; /* Center the div horizontally */
-    padding-top: 100px; /* Ensure content below the fixed header is visible */
+    width: 80%;
+    /* Adjust the width as needed */
+    margin: 0 auto;
+    /* Center the div horizontally */
+    padding-top: 100px;
+    /* Ensure content below the fixed header is visible */
 }
+
 .navbar-nav .nav-item>a {
     color: #594539;
     opacity: 0.5;
@@ -111,10 +126,14 @@ nav {
 .profile:before {
     content: ' ';
     /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#000000+0,000000+100&0+0,0.95+100 */
-background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.95) 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.95) 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.95) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#f2000000',GradientType=0 ); /* IE6-9 */
+    background: -moz-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.95) 100%);
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.95) 100%);
+    /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.95) 100%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#f2000000', GradientType=0);
+    /* IE6-9 */
     position: absolute;
     left: 0;
     right: 0;
@@ -184,16 +203,18 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', e
     bottom: 0;
     left: 0;
     background-color: #F2DCC9;
-  }
-  .bar-ing {
+}
+
+.bar-ing {
     position: absolute;
     height: 5px;
     bottom: 0;
     left: 0;
     background-color: #594539;
-  }
-  /* 모달창 기본 스타일 */
-  .modal {
+}
+
+/* 모달창 기본 스타일 */
+.modal {
     display: none;
     position: fixed;
     z-index: 1;
@@ -203,26 +224,61 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', e
     height: 100%;
     overflow: auto;
     background-color: rgba(0, 0, 0, 0.4);
+    text-align: center;
+    border-radius: 10px; 
+    box-shadow: 0 2px 3px 0 rgba(34, 36, 38, 0.15); 
 }
 
 /* 모달창 내용 스타일 */
 .modal-content {
     background-color: #fefefe;
     margin: 15% auto;
-    padding: 20px;
+    padding: 50px;
     border: 1px solid #888;
     width: 30%;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
+
 /* 여백조정 */
 .input-container {
-    margin-bottom: 10px; /* 원하는 여백 크기로 조정 */
-}
-/* 입력란 스타일 수정 */
-.input-container input {
-    display: block; /* 줄로 표시 */
-    width: 100%; /* 부모 요소의 전체 너비를 채우도록 설정 */
-    box-sizing: border-box; /* 너비와 높이에 padding과 border를 포함 */
-    margin-bottom: 10px; /* 원하는 여백 크기로 조정 */
+    margin-bottom: 10px;
+    /* 원하는 여백 크기로 조정 */
 }
 
+.input-container input {
+    display: block;
+    width: 100%;
+    box-sizing: border-box;
+    margin-bottom: 10px;
+}
+
+.row {
+    display: flex;
+    padding: 10px 0;
+}
+
+.memberAdd{
+    width: 400px;
+    margin: 0 auto;
+}
+
+.title_content{
+    display: flex;
+    align-items: center;
+    width: 100px;
+    height: 40px;
+    font-weight: bold;
+}
+.txtfield{
+    width: 300px;
+    height: 38px;
+    font-size: 13px;
+    padding: 10px;
+    box-sizing: border-box;
+}
+.txtfield.big{
+	height: 150px;
+}
+.title_content.big{
+	height: 150px;
+}
