--- a/Design/style.css
+++ b/Design/style.css
@@ -233,7 +233,7 @@ nav {
 .modal-content {
     background-color: #fefefe;
     margin: 15% auto;
-    padding: 50px;
+    padding: 1%;
     border: 1px solid #888;
     width: 30%;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
