--- a/Design/style.css
+++ b/Design/style.css
@@ -52,12 +52,11 @@ body {
 .wrapper {
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start; 
+    justify-content: center; 
     align-items: flex-start;
     margin: 30px;
     gap: 10px; 
 }
-
 
 .team-item {
     flex: 0 0 20%;  
