--- a/Design/style.css
+++ b/Design/style.css
@@ -17,20 +17,24 @@
     font-family: "NIXGONFONTS_M";
 }
 
-input[type="password"]{
-    font-family: "Arial", sans-serif; /* 비밀번호 입력란의 기본 폰트 */
+input[type="password"] {
+    font-family: "Arial", sans-serif;
+    /* 비밀번호 입력란의 기본 폰트 */
 }
-input[type="email"]{
-    font-family: "Arial", sans-serif; /* 비밀번호 입력란의 기본 폰트 */
+
+input[type="email"] {
+    font-family: "Arial", sans-serif;
+    /* 비밀번호 입력란의 기본 폰트 */
 }
 
 .team-description p {
-    font-size: 22px; /* 여기에 적절한 폰트 크기를 입력하세요 */
+    font-size: 22px;
+    /* 여기에 적절한 폰트 크기를 입력하세요 */
 }
 
 body::-webkit-scrollbar {
     display: none;
-  }
+}
 
 form body,
 ul,
@@ -52,25 +56,25 @@ body {
 .wrapper {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center; 
+    justify-content: center;
     align-items: flex-start;
     margin: 30px;
-    gap: 10px; 
+    gap: 10px;
 }
 
 .team-item {
-    flex: 0 0 20%;  
-    max-width: 20%; 
-    margin: 5px; 
+    flex: 0 0 20%;
+    max-width: 20%;
+    margin: 5px;
     opacity: 0.4;
-    transition: all .4s ease-in-out; 
-    height: auto; 
-    background-color: #f2f2f2; 
+    transition: all .4s ease-in-out;
+    height: auto;
+    background-color: #f2f2f2;
 }
 
 .team-item:hover {
-    flex-basis: 24%; 
-    opacity: 1; 
+    flex-basis: 24%;
+    opacity: 1;
     transition: all .4s ease-in-out;
 }
 
@@ -93,14 +97,11 @@ header {
     cursor: default;
 }
 
-#test {
-    width: 80%;
-    /* Adjust the width as needed */
+ #detail_img {
     margin: 0 auto;
-    /* Center the div horizontally */
-    padding-top: 100px;
-    /* Ensure content below the fixed header is visible */
-}
+    display:inline-block; 
+    vertical-align:top;
+} 
 
 .navbar-nav .nav-item>a {
     color: #594539;
@@ -267,8 +268,8 @@ header {
     overflow: auto;
     background-color: rgba(0, 0, 0, 0.4);
     text-align: center;
-    border-radius: 10px; 
-    box-shadow: 0 2px 3px 0 rgba(34, 36, 38, 0.15); 
+    border-radius: 10px;
+    box-shadow: 0 2px 3px 0 rgba(34, 36, 38, 0.15);
 }
 
 /* 모달창 내용 스타일 */
@@ -280,6 +281,14 @@ header {
     width: 30%;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
+.modal-content-detail {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 1%;
+    border: 1px solid #888;
+    width: 50%;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
 
 /* 여백조정 */
 .input-container {
@@ -287,7 +296,7 @@ header {
     /* 원하는 여백 크기로 조정 */
 }
 
-.input-container input{
+.input-container input {
     display: block;
     width: 100%;
     box-sizing: border-box;
@@ -299,56 +308,68 @@ header {
     padding: 10px 0;
 }
 
-.memberAdd{
+.memberAdd {
     width: 400px;
     margin: 0 auto;
 }
 
-.title_content{
+.title_content {
     display: flex;
     align-items: center;
-    width: 100px;
+    width: 30%;
     height: 40px;
     font-weight: bold;
 }
-.title_content_answer{
+
+.title_content_answer {
     display: flex;
     align-items: center;
-    width: 100px;
+    width: 70%;
     height: 40px;
 }
-.txtfield{
-    width: 300px;
+
+.txtfield {
+    width: 70%;
     height: 38px;
     font-size: 13px;
     padding: 10px;
     box-sizing: border-box;
 }
-.txtfield.big{
-	height: 150px;
+
+.txtfield.big {
+    height: 150px;
 }
-.title_content.big{
-	height: 150px;
+
+.title_content.big {
+    height: 150px;
 }
 
 textarea {
-    resize: none; 
+    resize: none;
 }
 
-.membtn-container{
+.membtn-container {
     text-align: center;
 }
+
 #memberAddBtn {
-    background-color: #D9BDAD; /* 새로운 배경색 지정 */
-    color: white; /* 텍스트 색상을 밝게 설정하여 대비를 높임 */
-    border: none; /* 테두리 제거 */
-    padding: 10px 20px; /* 적절한 패딩값 추가 (예시) */
-    border-radius: 5px; /* 버튼 모서리를 둥글게 만듦 */
-    cursor: pointer; /* 마우스 커서를 포인터로 변경 */
+    background-color: #D9BDAD;
+    /* 새로운 배경색 지정 */
+    color: white;
+    /* 텍스트 색상을 밝게 설정하여 대비를 높임 */
+    border: none;
+    /* 테두리 제거 */
+    padding: 10px 20px;
+    /* 적절한 패딩값 추가 (예시) */
+    border-radius: 5px;
+    /* 버튼 모서리를 둥글게 만듦 */
+    cursor: pointer;
+    /* 마우스 커서를 포인터로 변경 */
 }
 
 #memberAddBtn:hover {
-    background-color: #d9b29c; /* 마우스 오버 시 배경색 변경 */
+    background-color: #d9b29c;
+    /* 마우스 오버 시 배경색 변경 */
 }
 
 /* moveTop 버튼 */
@@ -362,11 +383,13 @@ textarea {
     background-color: transparent;
     border: none;
     cursor: pointer;
-  }
-  .btn-moveTop:hover {
+}
+
+.btn-moveTop:hover {
     background-image: url(./images/btn-moveTop-hover.jpg);
-  }
-  /* movebottom 버튼 */
+}
+
+/* movebottom 버튼 */
 .btn-moveBottom {
     position: fixed;
     right: 60px;
@@ -377,15 +400,16 @@ textarea {
     background-color: transparent;
     border: none;
     cursor: pointer;
-  }
-  .btn-moveBottom:hover {
-    background-image: url(./images/btn-moveBottom-hover.jpg);
-  }
+}
 
-  
-.modal-header{
-    display: flex; 
-    justify-content: space-between; 
+.btn-moveBottom:hover {
+    background-image: url(./images/btn-moveBottom-hover.jpg);
+}
+
+
+.modal-header {
+    display: flex;
+    justify-content: space-between;
     align-items: center;
     padding: 10px;
 }
@@ -399,18 +423,28 @@ textarea {
     cursor: pointer;
 }
 
-#edit{
+#edit {
     background-image: url(./images/edit.png);
 }
 
-#delete{
+#delete {
     background-image: url(./images/delete.png);
 }
 
-#edit:hover{
+#edit:hover {
     background-image: url(./images/edit-hover.png);
 }
 
-#delete:hover{
+#delete:hover {
     background-image: url(./images/delete-hover.png);
+}
+
+.profile-picture {
+    width: 150px;
+    height: 230px;
+
+}
+
+#detail_img{
+   margin-top: 10px;
 }
