--- a/Design/style.css
+++ b/Design/style.css
@@ -377,8 +377,8 @@ textarea {
 /* moveTop 버튼 */
 .btn-moveTop {
     position: fixed;
-    right: 60px;
-    bottom: 104px;
+    right: 2%;
+    bottom: 64px;
     width: 44px;
     height: 44px;
     background-image: url(./images/btn-moveTop.jpg);
@@ -394,8 +394,8 @@ textarea {
 /* movebottom 버튼 */
 .btn-moveBottom {
     position: fixed;
-    right: 60px;
-    bottom: 60px;
+    right: 2%;
+    bottom: 20px;
     width: 44px;
     height: 44px;
     background-image: url(./images/btn-moveBottom.jpg);
