fix: event time and design

--- a/Design/style.css
+++ b/Design/style.css
@@ -259,7 +259,7 @@ header {
 .modal {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 2000;
     left: 0;
     top: 0;
     width: 100%;
@@ -388,27 +388,6 @@ textarea {
     width: 30%;
     height: 30%;
     bottom: 0;
-    background-size: cover;
-    background-position: center;
-    transition: transform 0.5s ease-out;
-}
-.background-image {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    background-position: center;
-    transition: transform 0.5s ease-out;
-}
-.background-image {
-    background-image: url(./images/background-image.png); /* 얼음 배경 이미지 */
-    background-size: contain;
-    
-    /*filter: blur(5px);*/
-    opacity: 0.5;
-}
-
-.cat-image {
     background-image: url(./images/cat-image.png); /* 고양이 이미지 */
     background-size: contain;
     background-repeat: no-repeat; /* 이미지가 반복x 설정 */
@@ -432,7 +411,7 @@ textarea {
 
 .fade-text {
     opacity: 0;
-    transition: opacity 0.8s ease-out, transform 0.3s ease-out; /* 투명도 및 위치 변화 속도 조정 */
+    transition: opacity 0.5s ease-out, transform 0.3s ease-out; /* 투명도 및 위치 변화 속도 조정 */
     transform: translateY(-20px); /* 초기 위치 설정 */
 }
 .fade-text:last-child { /* 마지막 p 태그만 특별하게 */
@@ -440,3 +419,77 @@ textarea {
     font-weight: bold; 
     color: rgb(130, 94, 94);
 }
+@keyframes background-image {
+    from {
+      opacity: 0;
+      transform: translateY(10px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
+  body {
+    background: radial-gradient(ellipse at center, #fffeea 0%, #fffeea 35%, #B7E8EB 100%);
+    position: relative;
+  }
+  .ocean {
+    height: 5%;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background: #015871;
+  }
+  
+  .wave {
+    background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/85486/wave.svg) repeat-x;
+    position: absolute;
+    top: -198px;
+    width: 6400px;
+    height: 198px;
+    animation: wave 6s cubic-bezier(0.36, 0.45, 0.63, 0.53) infinite;
+    transform: translate3d(0, 0, 0);
+  }
+  
+  .wave:nth-of-type(2) {
+    top: -175px;
+    animation: wave 7s cubic-bezier(0.4, 0.45, 0.63, 0.53) -.125s infinite, swell 7s ease -1.25s infinite;
+    opacity: 1;
+  }
+  
+  .wave:nth-of-type(3) {
+    top: -150px;
+    animation: wave 8s cubic-bezier(0.36, 0.45, 0.63, 0.53) -.25s infinite, swell 8s ease -1.5s infinite;
+    opacity: 0.8;
+  }
+  
+  .wave:nth-of-type(4) {
+    top: -125px;
+    animation: wave 9s cubic-bezier(0.36, 0.45, 0.63, 0.53) -.375s infinite, swell 9s ease -1.75s infinite;
+    opacity: 0.6;
+  }
+  
+  @keyframes wave {
+    0% {
+      margin-left: 0;
+    }
+    100% {
+      margin-left: -1600px;
+    }
+  }
+  
+  @keyframes swell {
+    0%, 100% {
+      transform: translate3d(0, -35px, 0);
+    }
+    250% {
+        transform: translate3d(0, -15px, 0);
+      }
+    50% {
+      transform: translate3d(0, 50px, 0);
+    }
+  }
+
+  
