--- a/Design/style.css
+++ b/Design/style.css
@@ -330,6 +330,10 @@ header {
     margin: 0 auto;
 }
 
+.memberUpdate{
+    width: 400px;
+    margin: 0 auto;
+}
 .title_content{
     display: flex;
     align-items: center;
