--- a/Design/style.css
+++ b/Design/style.css
@@ -26,21 +26,24 @@
     font-family: 'GmarketSansTTFMedium', sans-serif;
 }
 
-.fade-text{
+.fade-text {
     font-family: "NIXGONFONTS_L";
     font-weight: bold;
 }
 
-input[type="password"]{
-    font-family: "Arial", sans-serif; /* 비밀번호 입력란의 기본 폰트 */
+input[type="password"] {
+    font-family: "Arial", sans-serif;
+    /* 비밀번호 입력란의 기본 폰트 */
 }
 
-input[type="email"]{
-    font-family: "Arial", sans-serif; /* 비밀번호 입력란의 기본 폰트 */
+input[type="email"] {
+    font-family: "Arial", sans-serif;
+    /* 비밀번호 입력란의 기본 폰트 */
 }
 
 .team-description p {
-    font-size: 22px; /* 여기에 적절한 폰트 크기를 입력하세요 */
+    font-size: 22px;
+    /* 여기에 적절한 폰트 크기를 입력하세요 */
 }
 
 body::-webkit-scrollbar {
@@ -69,7 +72,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     margin: 30px;
     gap: 10px;
 }
@@ -109,11 +112,11 @@ header {
     cursor: default;
 }
 
- #detail_img {
+#detail_img {
     margin: 0 auto;
-    display:inline-block; 
-    vertical-align:top;
-} 
+    display: inline-block;
+    vertical-align: top;
+}
 
 .navbar-nav .nav-item>a {
     color: #594539;
@@ -301,18 +304,21 @@ header {
 
 /* 모달창 내용 스타일 */
 .modal-content {
-    background-color: #fefefe;
+    background-color: #fcf6f2;
     margin: 7% auto;
     padding: 1%;
-    border: 1px solid #888;
+    border: 8px solid #ceb3a1;
+    border-radius: 8px;
     width: 30%;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
+
 .modal-content-detail {
-    background-color: #fefefe;
+    background-color: #fcf6f2;
     margin: 7% auto;
-    padding: 1%;
-    border: 1px solid #888;
+    padding: 3%;
+    border: 8px solid #ceb3a1;
+    border-radius: 8px;
     width: 50%;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
@@ -323,7 +329,7 @@ header {
     /* 원하는 여백 크기로 조정 */
 }
 
-.input-container input{
+.input-container input {
     display: block;
     width: 100%;
     box-sizing: border-box;
@@ -335,20 +341,22 @@ header {
     padding: 10px 0;
 }
 
-.row a{
-    color: inherit; /* 링크의 색상 제거 */
+.row a {
+    color: inherit;
+    /* 링크의 색상 제거 */
 }
 
-.memberAdd{
+.memberAdd {
     width: 400px;
     margin: 0 auto;
 }
 
-.memberUpdate{
+.memberUpdate {
     width: 400px;
     margin: 0 auto;
 }
-.title_content{
+
+.title_content {
     display: flex;
     align-items: center;
     width: 30%;
@@ -363,7 +371,7 @@ header {
     height: 40px;
 }
 
-.txtfield{
+.txtfield {
     width: 70%;
     height: 38px;
     font-size: 13px;
@@ -371,11 +379,11 @@ header {
     box-sizing: border-box;
 }
 
-.txtfield.big{
+.txtfield.big {
     height: 150px;
 }
 
-.title_content.big{
+.title_content.big {
     height: 150px;
 }
 
@@ -383,21 +391,28 @@ textarea {
     resize: none;
 }
 
-.membtn-container{
+.membtn-container {
     text-align: center;
 }
 
 #memberAddBtn {
-    background-color: #D9BDAD; /* 새로운 배경색 지정 */
-    color: white; /* 텍스트 색상을 밝게 설정하여 대비를 높임 */
-    border: none; /* 테두리 제거 */
-    padding: 10px 20px; /* 적절한 패딩값 추가 (예시) */
-    border-radius: 5px; /* 버튼 모서리를 둥글게 만듦 */
-    cursor: pointer; /* 마우스 커서를 포인터로 변경 */
+    background-color: #D9BDAD;
+    /* 새로운 배경색 지정 */
+    color: white;
+    /* 텍스트 색상을 밝게 설정하여 대비를 높임 */
+    border: 4px solid #ceb3a1;
+    border-radius: 8px;
+    padding: 10px 20px;
+    /* 적절한 패딩값 추가 (예시) */
+    border-radius: 5px;
+    /* 버튼 모서리를 둥글게 만듦 */
+    cursor: pointer;
+    /* 마우스 커서를 포인터로 변경 */
 }
 
 #memberAddBtn:hover {
-    background-color: #d9b29c; /* 마우스 오버 시 배경색 변경 */
+    background-color: #d9b29c;
+    /* 마우스 오버 시 배경색 변경 */
 }
 
 /* moveTop 버튼 */
@@ -434,8 +449,8 @@ textarea {
     background-image: url(./images/btn-moveBottom-hover.png);
 }
 
-  /* 스크롤에 따른 헤더 변화를 위한 스타일 */
-  .container {
+/* 스크롤에 따른 헤더 변화를 위한 스타일 */
+.container {
     position: relative;
     height: 60vh;
     overflow: hidden;
@@ -446,77 +461,99 @@ textarea {
     width: 30%;
     height: 30%;
     bottom: 0;
-    background-image: url(./images/cat-image.png); /* 고양이 이미지 */
+    background-image: url(./images/cat-image.png);
+    /* 고양이 이미지 */
     background-size: contain;
-    background-repeat: no-repeat; /* 이미지가 반복x 설정 */
-    background-position: center; /* 이미지가 중앙에 위치하도록 설정 */
+    background-repeat: no-repeat;
+    /* 이미지가 반복x 설정 */
+    background-position: center;
+    /* 이미지가 중앙에 위치하도록 설정 */
     z-index: 1;
+    opacity: 0.8;
 }
+
 .text-content {
     position: absolute;
     width: 100%;
-    top: 55%; /* 중앙 위치 조정 */
-    transform: translateY(-50%); /* Y축 기준 중앙 정렬 */
+    top: 55%;
+    /* 중앙 위치 조정 */
+    transform: translateY(-50%);
+    /* Y축 기준 중앙 정렬 */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
+
     font-size: 28px;
     z-index: 2;
-    transition: transform 0.2s ease-out; /* 이동 속도 빠르게 */
+    transition: transform 0.2s ease-out;
+    /* 이동 속도 빠르게 */
 }
 
 .fade-text {
     opacity: 0;
-    transition: opacity 0.5s ease-out, transform 0.3s ease-out; /* 투명도 및 위치 변화 속도 조정 */
-    transform: translateY(-20px); /* 초기 위치 설정 */
+    transition: opacity 0.5s ease-out, transform 0.3s ease-out;
+    /* 투명도 및 위치 변화 속도 조정 */
+    transform: translateY(-20px);
+    /* 초기 위치 설정 */
 }
 
 /* 첫 번째 문단에 특정 폰트, 크기, 색상 적용 */
 .fade-text:first-child {
     font-family: "NIXGONFONTS_B", sans-serif;
     font-size: 43px;
-    color: #00A4CCFF; /* 약간의 푸른색조 */
+    color: #594539;
+    /* 약간의 푸른색조 */
+    font-weight: normal;
+
 }
 
 /* 두 번째 및 세 번째 문단은 더 작고 가는 폰트로 */
-.fade-text:nth-child(2), .fade-text:nth-child(3),.fade-text:nth-child(4) {
-    font-family: "NIXGONFONTS_M", sans-serif; /* 가볍고 얇은 폰트 */
-    font-size: 18px; /* 작은 폰트 크기 */
-    color: #333; /* 가독성을 위한 어두운 색상 */
+.fade-text:nth-child(2),
+.fade-text:nth-child(3),
+.fade-text:nth-child(4) {
+    font-family: "NIXGONFONTS_M", sans-serif;
+    /* 가볍고 얇은 폰트 */
+    font-size: 18px;
+    /* 작은 폰트 크기 */
+    color: #333;
+    /* 가독성을 위한 어두운 색상 */
 }
 
-.fade-text:last-child { /* 마지막 p 태그만 특별하게 */
-    font-size: 25px; 
-    font-weight: bold; 
+.fade-text:last-child {
+    /* 마지막 p 태그만 특별하게 */
+    font-size: 25px;
+    font-weight: bold;
     color: rgb(97, 107, 118);
 }
+
 @keyframes background-image {
     from {
-      opacity: 0;
-      transform: translateY(10px);
+        opacity: 0;
+        transform: translateY(10px);
     }
-    to {
-      opacity: 1;
-      transform: translateY(0);
-    }
-  }
 
-  body {
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+body {
     background: radial-gradient(ellipse at center, #fffeea 0%, #fffeea 35%, #B7E8EB 100%);
     position: relative;
-  }
-  .ocean {
+}
+
+.ocean {
     height: 5%;
     width: 100%;
     position: absolute;
     bottom: 0;
     left: 0;
-    background: #015871;
-  }
-  
-  .wave {
+    background: #594539;
+}
+
+.wave {
     background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/85486/wave.svg) repeat-x;
     position: absolute;
     top: -198px;
@@ -524,48 +561,53 @@ textarea {
     height: 198px;
     animation: wave 6s cubic-bezier(0.36, 0.45, 0.63, 0.53) infinite;
     transform: translate3d(0, 0, 0);
-  }
-  
-  .wave:nth-of-type(2) {
+}
+
+.wave:nth-of-type(2) {
     top: -175px;
     animation: wave 7s cubic-bezier(0.4, 0.45, 0.63, 0.53) -.125s infinite, swell 7s ease -1.25s infinite;
     opacity: 1;
-  }
-  
-  .wave:nth-of-type(3) {
+}
+
+.wave:nth-of-type(3) {
     top: -150px;
     animation: wave 8s cubic-bezier(0.36, 0.45, 0.63, 0.53) -.25s infinite, swell 8s ease -1.5s infinite;
     opacity: 0.8;
-  }
-  
-  .wave:nth-of-type(4) {
+}
+
+.wave:nth-of-type(4) {
     top: -125px;
     animation: wave 9s cubic-bezier(0.36, 0.45, 0.63, 0.53) -.375s infinite, swell 9s ease -1.75s infinite;
     opacity: 0.6;
-  }
-  
-  @keyframes wave {
+}
+
+@keyframes wave {
     0% {
-      margin-left: 0;
+        margin-left: 0;
     }
+
     100% {
-      margin-left: -1600px;
+        margin-left: -1600px;
     }
-  }
-  
-  @keyframes swell {
-    0%, 100% {
-      transform: translate3d(0, -35px, 0);
+}
+
+@keyframes swell {
+
+    0%,
+    100% {
+        transform: translate3d(0, -35px, 0);
     }
+
     250% {
         transform: translate3d(0, -15px, 0);
-      }
-    50% {
-      transform: translate3d(0, 50px, 0);
     }
-  }
 
-  
+    50% {
+        transform: translate3d(0, 50px, 0);
+    }
+}
+
+
 .modal-header {
     display: flex;
     justify-content: space-between;
@@ -573,18 +615,13 @@ textarea {
     padding: 10px;
 }
 
-/* 자기소개페이지 모달버튼 */
-.modal-button-detail {
-    width: 21px;
-    height: 21px;
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-}
+
+
 .modal-button {
-    padding:1%;
-    border:none;
-    cursor:pointer
+    padding: 1%;
+    border: 8px solid #7c6251;
+    border-radius: 8px;
+    cursor: pointer
 }
 
 #edit {
@@ -609,15 +646,37 @@ textarea {
 
 }
 
-#detail_img{
-   margin-top: 10px;
-   width: 200px;
+#detail_img {
+    margin-top: 10px;
+    width: 200px;
 }
 
-.detail_head{
-    display:inline-block; 
+.detail_head {
+    display: inline-block;
     width: calc(100% - 300px);
-    /* 이미지 너비에는 실제 이미지의 너비를 넣어주셔야 합니다. */
-    padding-right: 0; /* 또는 여러분이 원하는 값으로 설정 */
-    /* 기타 스타일링 */
+    padding-right: 0;
+    /* 또는 여러분이 원하는 값으로 설정 */
+}
+
+.modal-content {
+    background-color: #fcf6f2;
+}
+
+#detailModal .modal-content {
+    background-color: #D9BDAD;
+}
+
+.modal-button {
+    background-color: #d9b29c;
+    /* New color for buttons */
+    border: none;
+    /* Removes any default border */
+    color: white;
+    border-radius: 8px;
+    padding: 10px 20px;
+    transition: background-color 0.3s;
+}
+
+.modal-button:hover {
+    background-color: #c18b79;
 }
